[package]
name = "authelia-webfinger"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "~4.12.1"
clap = { version = "~4.5", features = [ "cargo" ] }
serde = { version = "~1.0", features = [ "derive" ] }
serde-saphyr = "~0.0.10"
tracing = "~0.1.41"
tracing-actix-web = "~0.7.19"
tracing-log = "~0.2.0"
tracing-subscriber = "~0.3.20"

[target.'cfg(windows)'.dependencies]
nu-ansi-term = "~0.50.3"
