[package]
name = "authelia-webfinger"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "~0.8.8", features = [ "http1", "http2", "json", "query", "tokio" ] }
clap = { version = "~4.5", features = [ "cargo" ] }
serde = { version = "~1.0", features = [ "derive" ] }
serde-saphyr = { version = "~0.0.13", features = [ "garde" ] }
tokio = { version = "~1.49.0", features = [ "rt-multi-thread" ] }
tower = "~0.5.2"
tower-http = { version = "~0.6.8", features = [ "compression-full", "trace" ] }
tracing = "~0.1.44"
tracing-subscriber = "~0.3.22"

[target.'cfg(windows)'.dependencies]
nu-ansi-term = "~0.50.3"
