[package]
name = "authelia-webfinger"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "~0.8.9", features = [ "http1", "http2", "json", "query", "tokio" ] }
clap = { version = "~4.6", features = [ "cargo" ] }
serde = { version = "~1.0", features = [ "derive" ] }
serde-saphyr = "~0.0.26"
tokio = { version = "~1.52.2", features = [ "rt-multi-thread" ] }
tower = "~0.5.3"
tower-http = { version = "~0.6.9", features = [ "compression-full", "trace" ] }
tracing = "~0.1.44"
tracing-subscriber = "~0.3.23"

[target.'cfg(windows)'.dependencies]
nu-ansi-term = "~0.50.3"
